--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
       <div class="card-h d-flex justify-content-between mt-3  bg-dark">
      
       <div class="img " style="width: 45rem;">
-  <img src="./images/honolulu.jpg" class="card-img-top" alt="...">
+  <img src="./images/honolulu.jpg" class="card-img-top "  alt="...">
   </div>
   <div class="m-2 text-white">
 <h1>Bs As - Octubre</h1>
-    <p class="card-text" style="width: 45rem;">Buenos Aires es la provincia y localidad mas grande del estado de Argentina, en los Estados Unidos Honolulu es la sureña de entre las principales ciudades estaunidenses. Aunque el nombre de Honolulu se refiere al area urbana en la costo sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad condado consolidada que cubre toda la ciudad(aproximadamente 600km de superficie).</p>
+    <p class="card-text" >Buenos Aires es la provincia y localidad mas grande del estado de Argentina, en los Estados Unidos Honolulu es la sureña de entre las principales ciudades estaunidenses. Aunque el nombre de Honolulu se refiere al area urbana en la costo sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad condado consolidada que cubre toda la ciudad(aproximadamente 600km de superficie).</p>
     <button class=" btn-h btn-dark btn-cards p-1 m-1  rounded-2 border border-white">Conocé más</button>
   </div>
   </div>
@@ -234,9 +234,9 @@
     <footer class="w-100  bg-primary text-white mt-3">
       <div class="columnas">
       <div class="row d-flex justify-content-center g-1 ">
-               <div class="col-1">
-          <span>Preguntas</span>
-           <span>Frecuentes</span>
+        <div class="col-1">
+        <span>Preguntas</span>
+         <span>Frecuentes</span>
                </div>
          <div class="col-1">
           <span>Contactanos</span>
