--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="carousel-inner d-flex  justify-content-start">
           <div class="carousel-item active">
             <img src="./images/hawaii.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block text-carrusel">
+            <div class="carousel-caption  d-md-block text-carrusel">
             <div >
             <h3 class=" d-flex justify-content-end" >Conf Bs As</h3>
                             <p class="text-carrusel d-flex justify-content-end">Bs As llega por primera vez a la Argentina. Un evento para compartir con <br> nuestra comunidad el conocm¿imiento y experiencia de los expertos que<br> estan creando el futuro de Internet. Ven a conocer a miembros del <br> evento a otros estudiantes de Codo a Codo y los oradores de primer <br> nivel que tenemos para ti. Te esperamos</p> 
@@ -232,29 +232,29 @@
       </section>
       
     <footer class="w-100  bg-primary text-white mt-3">
-      <div class="columnas">
-      <div class="row d-flex justify-content-center g-1 ">
-        <div class="col-1">
+      <div class="container ">
+      <div class="row d-flex justify-content-center gap-2  ">
+        <div class="col">
         <span>Preguntas</span>
          <span>Frecuentes</span>
                </div>
-         <div class="col-1">
+         <div class="col">
           <span>Contactanos</span>
         </div>
-         <div class="col-1">
+         <div class="col">
           <span>Prensa</span>
         </div>
-         <div class="col-1">
+         <div class="col">
           <span>Conferencias</span>
         </div>
-         <div class="col-1">
+         <div class="col">
           <span>Terminos y</span>
           <span>Condiciones</span>
         </div>
-         <div class="col-1">
+         <div class="col">
           <span>Privacidad</span>
         </div>
-        <div class="col-1">
+        <div class="col">
           <span>Estudiantes</span>
         </div>
         
